--- a/src/NetFighter/Views/Shared/_Layout.cshtml
+++ b/src/NetFighter/Views/Shared/_Layout.cshtml
@@ -1,19 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Login";
-    Layout = null;
     var baseUrl = $"{Context.Request.Scheme}://{Context.Request.Host}";
 }
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="@baseUrl/css/site.css" />
 </head>
 <body>
     <div class="container">
         @RenderBody()
     </div>
-    <script src="~/js/site.js"></script>
+    <script src="@baseUrl/js/site.js"></script>
 </body>
 </html>
